--- a/UseQuest/UseQuest.csproj
+++ b/UseQuest/UseQuest.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="QuestPDF" Version="2024.7.2" />
+  </ItemGroup>
+
 </Project>
